header nav needed about class

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -7,7 +7,7 @@
 			<div class="nav">
 				<div class="pages">
 					<ul id="nav">
-						<li class="active">
+						<li class="about">
 							<a href="http://drAbout.meteor.com/">About</a>
 						</li>
 						<li class="contact">
